--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,22 +6,24 @@
 		html{
 			font-family: arial;
 			font-size: 62.5%;
+			scroll-behavior: smooth;
 		}
 		header{
-			background-color: #000;
+			background: linear-gradient(to top, #fff000,#ff0000);
 			color: #fff;
 			font-size: 1.8rem;
 			padding: 1rem;
 			padding-top: 2rem;
-			position: fixed;
+			
 			width: 100%;
 			
 		}
 		footer{
-			background-color: #000;
+			background-color:rgb(200,0,0);
 			color: #fff;
 			font-size: 1.8rem;
 			padding: 1rem;
+			text-align: center;
 		}
 		.conteudo{
 			font-size: 1.6rem;
@@ -39,11 +41,25 @@
 			text-align: justify;
 			margin: 0 auto;
 			max-width: 95%;
-			padding-top:  9rem;
+			padding-top:  3rem;
+		}
+		@media(min-width:280px) and (max-width:820px){
+			.conteudo-topo{
+				font-size: 1.6rem;
+				background-color: #fff;
+				padding: 1.5rem;
+				text-align: justify;
+				margin: 0 auto;
+				max-width: 95%;
+				padding-top:  15rem;
+			}
 		}
 
 		h1{
-			font-size: 2.5rem;
+			font-size: 2rem;
+			text-align: center;
+			text-shadow: 1px 1px 2px #000;
+			color:#ff0000
 		}
 
 		h2{
@@ -58,6 +74,12 @@
 			font-size: 1.6rem;
 		}
 			
+		h5{
+			font-size: 3rem;
+			color: #ff0000;
+			text-shadow: 1px 1px 2px color #ff0000;
+			text-align: center;
+		}
 		figure{
 			text-align: center;
 		}
@@ -65,9 +87,11 @@
 		
 		.imagem-site{
 	
-		width: 30%;
-		 height: 10%;
-		 border-radius: 60px 20px 60px 20px
+		width: 70%;
+		 height: 50%;
+		 border-radius: 10px 10px 10px 10px;
+		 border: solid;
+		 
 		 }
 		 @media(min-width: 280px) and (max-width: 820px){
 		 	.imagem-site{
@@ -78,18 +102,39 @@
 		 }
 		 } 
 		 #compras{
-		 	background-color: #ffff00;
-		 	width: 150px;
-		 	height: 100px;
+		 	background-color: rgba(255, 215, 0, 0.5);
+		 	width: 260px;
+		 	height: 130px;
 		 	right: 0px;
 		 	position: fixed;
 		 	text-align: center;
-		 	margin-top: 6rem;
+		 	margin-top: 2rem;
 		 	z-index: 1;
+			border-radius: 20px;
+			padding-top: 12px;
+			border: solid rgb(255, 0, 0);
+		 }
+		 @media(min-width: 280px ) and (max-width: 820px){
+			#compras{
+				background-color: rgba(255, 215, 0, 0.5);
+				width: 160px;
+				height: 100px;
+				right: 0px;
+				position: fixed;
+				text-align: center;
+				margin-top: 2rem;
+				z-index: 1;
+			   border-radius: 20px;
+			   padding-top: 30px;
+			   border: solid rgb(0, 255, 0);
+			}
 		 }
 
+
+
+
 		 #grid-conteudo{
-		 	background-color: #dcdcdc;
+		 	background-color: #fff;
 		 }
 
 		 .grid{
@@ -103,7 +148,7 @@
 		.grid div{
 			background-color: #fff;
 			text-align: center;
-			padding: 2px;
+			padding: 1rem;
 		}
 
 		#formulario{
@@ -137,19 +182,38 @@
 			padding: 5px
 			
 		}
+
+		#btn-compras{
+			text-align: center;
+			
+		}
+
+
+
 		nav{
 			text-align: right;
 			font-size: 1.6rem;
-			word-spacing: 10px;
+			word-spacing: 30px;
 			margin-right: 5%;
 			padding-bottom: 5px;
 
 		}
 		a{
 			text-decoration: none;
-			color: #fff;
+			color: #ffff00;
 			font-weight: bold;
+			text-shadow: 1px 1px 2px #000;
+			background-color: rgb(255, 0, 0);
+			padding: 3px;
+			border-radius: 10px;
 		}
 		a:hover{
-			color: #ffff00;
+			color: #fff;
+			text-shadow: 1px 1px 2px #000;
+			background-color: rgb(255, 0, 0);
+			padding: 3px;
+			border-radius: 10px;
+			border: solid #ffff00;
 		}
+		
+		
